; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_free-space-cache.c_add_new_bitmap.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/btrfs/extr_free-space-cache.c_add_new_bitmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btrfs_free_space_ctl = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 (%struct.btrfs_free_space_ctl*)* }
%struct.btrfs_free_space = type { i32, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.btrfs_free_space_ctl*, %struct.btrfs_free_space*, i32)* @add_new_bitmap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_new_bitmap(%struct.btrfs_free_space_ctl* %0, %struct.btrfs_free_space* %1, i32 %2) #0 {
  %4 = alloca %struct.btrfs_free_space_ctl*, align 8
  %5 = alloca %struct.btrfs_free_space*, align 8
  %6 = alloca i32, align 4
  store %struct.btrfs_free_space_ctl* %0, %struct.btrfs_free_space_ctl** %4, align 8
  store %struct.btrfs_free_space* %1, %struct.btrfs_free_space** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.btrfs_free_space_ctl*, %struct.btrfs_free_space_ctl** %4, align 8
  %8 = load i32, i32* %6, align 4
  %9 = call i32 @offset_to_bitmap(%struct.btrfs_free_space_ctl* %7, i32 %8)
  %10 = load %struct.btrfs_free_space*, %struct.btrfs_free_space** %5, align 8
  %11 = getelementptr inbounds %struct.btrfs_free_space, %struct.btrfs_free_space* %10, i32 0, i32 2
  store i32 %9, i32* %11, align 8
  %12 = load %struct.btrfs_free_space*, %struct.btrfs_free_space** %5, align 8
  %13 = getelementptr inbounds %struct.btrfs_free_space, %struct.btrfs_free_space* %12, i32 0, i32 1
  store i64 0, i64* %13, align 8
  %14 = load %struct.btrfs_free_space*, %struct.btrfs_free_space** %5, align 8
  %15 = getelementptr inbounds %struct.btrfs_free_space, %struct.btrfs_free_space* %14, i32 0, i32 0
  %16 = call i32 @INIT_LIST_HEAD(i32* %15)
  %17 = load %struct.btrfs_free_space_ctl*, %struct.btrfs_free_space_ctl** %4, align 8
  %18 = load %struct.btrfs_free_space*, %struct.btrfs_free_space** %5, align 8
  %19 = call i32 @link_free_space(%struct.btrfs_free_space_ctl* %17, %struct.btrfs_free_space* %18)
  %20 = load %struct.btrfs_free_space_ctl*, %struct.btrfs_free_space_ctl** %4, align 8
  %21 = getelementptr inbounds %struct.btrfs_free_space_ctl, %struct.btrfs_free_space_ctl* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 8
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %21, align 8
  %24 = load %struct.btrfs_free_space_ctl*, %struct.btrfs_free_space_ctl** %4, align 8
  %25 = getelementptr inbounds %struct.btrfs_free_space_ctl, %struct.btrfs_free_space_ctl* %24, i32 0, i32 0
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 0
  %28 = load i32 (%struct.btrfs_free_space_ctl*)*, i32 (%struct.btrfs_free_space_ctl*)** %27, align 8
  %29 = load %struct.btrfs_free_space_ctl*, %struct.btrfs_free_space_ctl** %4, align 8
  %30 = call i32 %28(%struct.btrfs_free_space_ctl* %29)
  ret void
}

declare dso_local i32 @offset_to_bitmap(%struct.btrfs_free_space_ctl*, i32) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1

declare dso_local i32 @link_free_space(%struct.btrfs_free_space_ctl*, %struct.btrfs_free_space*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
